[package]
name = "net-monitor"
version = "0.17.3"
edition = "2021"
authors = ["Casey"]
description = "A network monitoring tool with GUI and TUI interfaces"
repository = "https://github.com/casey/net-monitor"
documentation = "https://casey.github.io/net-monitor"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["network", "monitoring", "gui", "tui"]
categories = ["command-line-utilities", "network-programming"]

# Default binary with CLI mode selection (backward compatible)
[[bin]]
name = "net-monitor"
path = "src/main.rs"

# GUI-only binary
[[bin]]
name = "net-monitor-gui"
path = "src/bin/net-monitor-gui.rs"

# TUI-only binary
[[bin]]
name = "net-monitor-tui"
path = "src/bin/net-monitor-tui.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
directories = "6.0"
eframe = "0.32"
rfd = "0.15"
tokio = { version = "1.0", features = ["full"] }
rusqlite = { version = "0.37", features = ["chrono", "bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
ping = "0.6"
open = "5.0"
keyring = "3.0"
ssh2 = "0.9"
rsa = "0.10.0-rc.6"
ed25519-dalek = { version = "2.0", features = ["serde"] }
zeroize = { version = "1.0", features = ["derive"] }
argon2 = "0.5"
rand = "0.9"
aes-gcm = "0.10"
uuid = { version = "1.0", features = ["v4"] }
dirs = "6.0"
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4.5", features = ["derive"] }

[features]
default = []
network-tests = []

[dev-dependencies]
tempfile = "3.0"
lazy_static = "1.4"
futures = "0.3"
